[metadata]
name = kafkavents-reportportal
description = A bridge to translate Kafka events to ReportPortal API
long_description = file: README.md
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
zip_safe = False
include_package_data = True
py_modules = kafkavents-reportportal
#entry_points = file:entry_points.txt
setup_requires = setuptools_scm>=3.0.0
install_requires=
    confluent-kafka
    reportportal-client

[options.entry_points]
console_scripts =
    kafkavents-reportportal = kafkavents_reportportal:main
